feat : updated contact information and products sites

--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cleron - Specialists in Machine Tools</title>
+    <title>Contact Cleron</title>
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -12,16 +12,13 @@
             background-color: #f3f3f3;
         }
         header {
-            background-image: url('https://via.placeholder.com/1600x400');
-            background-size: cover;
+            background-color: #264653;
             color: white;
-            padding: 60px 20px;
+            padding: 40px;
             text-align: center;
         }
         header h1 {
-            font-size: 50px;
             margin: 0;
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
         }
         nav {
             background-color: #333;
@@ -43,10 +40,16 @@
             padding: 20px;
             text-align: center;
         }
-        .section-title {
+        .contact-info {
+            max-width: 600px;
+            margin: 0 auto;
+            background-color: #ffffff;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        .contact-info h2 {
             color: #e76f51;
-            font-size: 28px;
-            margin-bottom: 20px;
         }
         footer {
             background-color: #264653;
@@ -62,8 +65,7 @@
 <body>
 
     <header>
-        <h1>Cleron</h1>
-        <p>Specialists in Precision Machine Tools</p>
+        <h1>Contact Cleron</h1>
     </header>
 
     <nav>
@@ -75,24 +77,17 @@
     </nav>
 
     <main>
-        <section id="home">
-            <h2 class="section-title">Welcome to Cleron</h2>
-            <p>At Cleron, we specialize in providing state-of-the-art machine tools for various industries.</p>
-        </section>
-
-        <section id="about">
-            <h2 class="section-title">About Us</h2>
-            <p>Founded in 1990, Cleron has become a leader in the machine tool industry.</p>
-        </section>
-
-        <section id="services">
-            <h2 class="section-title">Our Services</h2>
-            <p>Explore our services to find the perfect solution for your manufacturing needs.</p>
-        </section>
+        <div class="contact-info">
+            <h2>Contact Details</h2>
+            <p>Email: <a href="mailto:clerontechnologies@gmail.com">clerontechnologies@gmail.com</a></p>
+            <p>Phone: (+91) 9962580995S</p>
+            <p>Address: Kelambakkam, Chennai 603103, India </p>
+            <p>Feel free to reach out to us for any inquiries or support!</p>
+        </div>
     </main>
 
     <footer>
-        <p>© 2024 Cleron | Precision Machine Tools for a Modern World</p>
+        <p>© 2024 Cleron | Get in Touch Anytime</p>
     </footer>
 
 </body>
