feat : embedded youtube video and updates products page

--- a/products.html
+++ b/products.html
@@ -76,29 +76,25 @@
 
     <nav>
         <a href="index.html">Home</a>
-        <a href="index.html#about">About Us</a>
         <a href="index.html#services">Our Services</a>
         <a href="products.html">Products</a>
         <a href="contact.html">Contact Us</a>
     </nav>
+
     <main>
         <h2 class="section-title">Explore Our Machine Tools</h2>
         <div class="product-list">
             <div class="product-card">
                 <img src="https://via.placeholder.com/300" alt="Product 1">
-                <h3>Lathe Machine</h3>
+                <h3>Tool breakage detection sensors (TBDS 003)</h3>
                 <p>High-precision lathe machines for all your manufacturing needs.</p>
             </div>
             <div class="product-card">
                 <img src="https://via.placeholder.com/300" alt="Product 2">
-                <h3>Milling Machine</h3>
+                <h3> touch probe (TATP 001)</h3>
                 <p>State-of-the-art milling machines for enhanced productivity.</p>
             </div>
-            <div class="product-card">
-                <img src="https://via.placeholder.com/300" alt="Product 3">
-                <h3>Drilling Machine</h3>
-                <p>Efficient drilling machines with unmatched durability.</p>
-            </div>
+
         </div>
     </main>
 
