--- a/contact.html
+++ b/contact.html
@@ -69,9 +69,8 @@
     </header>
 
     <nav>
-        <a href="#home">Home</a>
-        <a href="#about">About Us</a>
-        <a href="#services">Our Services</a>
+        <a href="index.html">Home</a>
+        <a href="index.html#services">Our Services</a>
         <a href="products.html">Products</a>
         <a href="contact.html">Contact Us</a>
     </nav>
