--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
             font-size: 28px;
             margin-bottom: 20px;
         }
+        iframe {
+            border: none;
+            border-radius: 8px;
+        }
         footer {
             background-color: #264653;
             color: white;
@@ -68,7 +72,6 @@
 
     <nav>
         <a href="#home">Home</a>
-        <a href="#about">About Us</a>
         <a href="#services">Our Services</a>
         <a href="products.html">Products</a>
         <a href="contact.html">Contact Us</a>
@@ -78,12 +81,20 @@
         <section id="home">
             <h2 class="section-title">Welcome to Cleron</h2>
             <p>At Cleron, we specialize in providing state-of-the-art machine tools for various industries.</p>
+            <div>
+                <!-- YouTube Video Embed -->
+                <iframe 
+                    width="560" 
+                    height="315" 
+                    src="https://www.youtube.com/embed/ZCLSSQA-onI" 
+                    title="YouTube video player" 
+                    frameborder="0" 
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                    allowfullscreen>
+                </iframe>
+            </div>
         </section>
 
-        <section id="about">
-            <h2 class="section-title">About Us</h2>
-            <p>Founded in 1990, Cleron has become a leader in the machine tool industry.</p>
-        </section>
 
         <section id="services">
             <h2 class="section-title">Our Services</h2>
