feat : added email id and products to the products webpages

--- a/index.html
+++ b/index.html
@@ -67,20 +67,22 @@
 
     <header>
         <h1>Cleron</h1>
-        <p>Specialists in Precision Machine Tools</p>
+        <p>Defect free machining</p>
     </header>
 
     <nav>
-        <a href="#home">Home</a>
-        <a href="#services">Our Services</a>
+        <a href="index.html">Home</a>
         <a href="products.html">Products</a>
+        <a href="distributorship.html">Distributorship</a>
+        <a href="trading.html">Trading</a>
+        <a href="consultancy.html">Consultancy</a>
         <a href="contact.html">Contact Us</a>
     </nav>
 
     <main>
         <section id="home">
             <h2 class="section-title">Welcome to Cleron</h2>
-            <p>At Cleron, we specialize in providing state-of-the-art machine tools for various industries.</p>
+            <p>At Cleron, we specialize in providing solutions for defect free machining.</p>
             <div>
                 <!-- YouTube Video Embed -->
                 <iframe 
@@ -95,11 +97,6 @@
             </div>
         </section>
 
-
-        <section id="services">
-            <h2 class="section-title">Our Services</h2>
-            <p>Explore our services to find the perfect solution for your manufacturing needs.</p>
-        </section>
     </main>
 
     <footer>
