--- a/products.html
+++ b/products.html
@@ -60,6 +60,19 @@
         .product-card h3 {
             color: #e76f51;
         }
+        .product-card a {
+            display: inline-block;
+            margin-top: 10px;
+            padding: 10px 15px;
+            color: white;
+            background-color: #264653;
+            border-radius: 5px;
+            text-decoration: none;
+            font-weight: bold;
+        }
+        .product-card a:hover {
+            background-color: #e76f51;
+        }
         footer {
             background-color: #264653;
             color: white;
@@ -76,25 +89,39 @@
 
     <nav>
         <a href="index.html">Home</a>
-        <a href="index.html#services">Our Services</a>
         <a href="products.html">Products</a>
+        <a href="distributorship.html">Distributorship</a>
+        <a href="trading.html">Trading</a>
+        <a href="consultancy.html">Consultancy</a>
         <a href="contact.html">Contact Us</a>
     </nav>
 
+
     <main>
-        <h2 class="section-title">Explore Our Machine Tools</h2>
+        <h2 class="section-title">Explore solutions for defect free machining</h2>
         <div class="product-list">
             <div class="product-card">
-                <img src="https://via.placeholder.com/300" alt="Product 1">
-                <h3>Tool breakage detection sensors (TBDS 003)</h3>
-                <p>High-precision lathe machines for all your manufacturing needs.</p>
+                <img src="images/tbds003.jpg" alt="Product 1">
+                <h3>Tool Breakage Detection Sensors / Tool Setter (TBDS 003)</h3>
+                <p>Advanced sensors to detect tool breakage with precision and speed.</p>
+                <p>To place order or make enquires you can mail us at : <a href="mailto:clerontechnologies@gmail.com">clerontechnologies@gmail.com</a> .</p>
+                <p> OR</p>
+                <!-- Embedded Amazon Link -->
+                <a href="https://www.amazon.in/CLERON-Single-Breakage-Detection-Sensor/dp/B0DN1NF64K/ref=sr_1_1?crid=10GK71P05PCFR&dib=eyJ2IjoiMSJ9.ZSw0L7t2jQnsHPK1KFex7GyzDKBkvi0odmOCUL2OXxZ9fZv_Y9SY5av4fO-VF_oTCfASWQsGpxKxt1blRXtdHIiQnr3qkIF2HGcmvBRt5p4.e36saFP88fjDbhKZuSmhltcta877VM67raY2baDEyNU&dib_tag=se&keywords=cleron&qid=1732875261&sprefix=cleron%2Caps%2C293&sr=8-1" target="_blank">
+                    Buy Now on Amazon
+                </a>
             </div>
             <div class="product-card">
-                <img src="https://via.placeholder.com/300" alt="Product 2">
-                <h3> touch probe (TATP 001)</h3>
-                <p>State-of-the-art milling machines for enhanced productivity.</p>
+                <img src="images/tapt.png" alt="Product 2">
+                <h3>Tri Axis Touch Probe (TATP 001) / Tool Setter</h3>
+                <p>State-of-the-art touch probes for enhanced precision and productivity.</p>
+                <p>To place order or make enquires you can mail us at : <a href="mailto:clerontechnologies@gmail.com">clerontechnologies@gmail.com</a> .</p>
+                <p> OR</p>
+                <!-- Embedded Amazon Link -->
+                <a href="https://www.amazon.in/CLERON-Single-Breakage-Detection-Sensor/dp/B0DN1NF64K/ref=sr_1_1?crid=10GK71P05PCFR&dib=eyJ2IjoiMSJ9.ZSw0L7t2jQnsHPK1KFex7GyzDKBkvi0odmOCUL2OXxZ9fZv_Y9SY5av4fO-VF_oTCfASWQsGpxKxt1blRXtdHIiQnr3qkIF2HGcmvBRt5p4.e36saFP88fjDbhKZuSmhltcta877VM67raY2baDEyNU&dib_tag=se&keywords=cleron&qid=1732875261&sprefix=cleron%2Caps%2C293&sr=8-1" target="_blank">
+                    Buy Now on Amazon
+                </a>
             </div>
-
         </div>
     </main>
 
