feat : added all the pages with the latest information

--- a/contact.html
+++ b/contact.html
@@ -70,10 +70,13 @@
 
     <nav>
         <a href="index.html">Home</a>
-        <a href="index.html#services">Our Services</a>
         <a href="products.html">Products</a>
+        <a href="distributorship.html">Distributorship</a>
+        <a href="trading.html">Trading</a>
+        <a href="consultancy.html">Services</a>
         <a href="contact.html">Contact Us</a>
     </nav>
+
 
     <main>
         <div class="contact-info">
