--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <a href="products.html">Products</a>
         <a href="distributorship.html">Distributorship</a>
         <a href="trading.html">Trading</a>
-        <a href="consultancy.html">Consultancy</a>
+        <a href="consultancy.html">Services</a>
         <a href="contact.html">Contact Us</a>
     </nav>
 
