--- a/index.html
+++ b/index.html
@@ -12,16 +12,13 @@
             background-color: #f3f3f3;
         }
         header {
-            background-image: url('https://via.placeholder.com/1600x400');
-            background-size: cover;
+            background-color: #264653;
             color: white;
-            padding: 60px 20px;
+            padding: 40px;
             text-align: center;
         }
         header h1 {
-            font-size: 50px;
             margin: 0;
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
         }
         nav {
             background-color: #333;
@@ -43,25 +40,36 @@
             padding: 20px;
             text-align: center;
         }
-        .section-title {
-            color: #e76f51;
-            font-size: 28px;
-            margin-bottom: 20px;
+        .services-container {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 20px;
+            margin-top: 20px;
         }
-        iframe {
-            border: none;
+        .service-card {
+            background-color: white;
             border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            width: 300px;
+            padding: 20px;
+            text-align: left;
+        }
+        .service-card h3 {
+            color: #e76f51;
+        }
+        .service-card p {
+            color: #333;
+            font-size: 16px;
         }
         footer {
             background-color: #264653;
             color: white;
             text-align: center;
             padding: 20px 0;
-            position: relative;
-            bottom: 0;
-            width: 100%;
         }
     </style>
+
 </head>
 <body>
 
