feat : company logo and datasheet included

--- a/contact.html
+++ b/contact.html
@@ -82,7 +82,7 @@
         <div class="contact-info">
             <h2>Contact Details</h2>
             <p>Email: <a href="mailto:clerontechnologies@gmail.com">clerontechnologies@gmail.com</a></p>
-            <p>Phone: (+91) 9962580995S</p>
+            <p>Phone: (+91) 9962580995</p>
             <p>Address: Kelambakkam, Chennai 603103, India </p>
             <p>Feel free to reach out to us for any inquiries or support!</p>
         </div>
