--- a/products.html
+++ b/products.html
@@ -110,6 +110,13 @@
                 <a href="https://www.amazon.in/CLERON-Single-Breakage-Detection-Sensor/dp/B0DN1NF64K/ref=sr_1_1?crid=10GK71P05PCFR&dib=eyJ2IjoiMSJ9.ZSw0L7t2jQnsHPK1KFex7GyzDKBkvi0odmOCUL2OXxZ9fZv_Y9SY5av4fO-VF_oTCfASWQsGpxKxt1blRXtdHIiQnr3qkIF2HGcmvBRt5p4.e36saFP88fjDbhKZuSmhltcta877VM67raY2baDEyNU&dib_tag=se&keywords=cleron&qid=1732875261&sprefix=cleron%2Caps%2C293&sr=8-1" target="_blank">
                     Buy Now on Amazon
                 </a>
+                <!-- Download Datasheet Section -->
+                <div class="download-section">
+                    <a href="documents/tbds003_datasheet.pdf" download>
+                        Download Datasheet
+                    </a>
+                </div>
+
             </div>
             <div class="product-card">
                 <img src="images/tapt.png" alt="Product 2">
@@ -121,6 +128,13 @@
                 <a href="https://www.amazon.in/CLERON-Single-Breakage-Detection-Sensor/dp/B0DN1NF64K/ref=sr_1_1?crid=10GK71P05PCFR&dib=eyJ2IjoiMSJ9.ZSw0L7t2jQnsHPK1KFex7GyzDKBkvi0odmOCUL2OXxZ9fZv_Y9SY5av4fO-VF_oTCfASWQsGpxKxt1blRXtdHIiQnr3qkIF2HGcmvBRt5p4.e36saFP88fjDbhKZuSmhltcta877VM67raY2baDEyNU&dib_tag=se&keywords=cleron&qid=1732875261&sprefix=cleron%2Caps%2C293&sr=8-1" target="_blank">
                     Buy Now on Amazon
                 </a>
+                <!-- Download Datasheet Section -->
+                <div class="download-section">
+                    <a href="documents/tatp001_datasheet.pdf" download>
+                        Download Datasheet
+                    </a>
+                </div>
+
             </div>
         </div>
     </main>
