--- a/trading.html
+++ b/trading.html
@@ -90,7 +90,7 @@
 
     <main> 
         <ul class="services-list">
-            <li>Machine tools electrical control panel accessories</li>
+            <li>Supply of machine tools electrical control panel accessories</li>
         </ul>
         <img src="images/ecp.jpeg" alt="Electrical Control Panel Accessories" class="service-image">
     </main>
