feat : company logo and page title added on each of the webpage

--- a/consultancy.html
+++ b/consultancy.html
@@ -20,6 +20,15 @@
         header h1 {
             margin: 0;
         }
+        .secondary-header {
+            margin-top: 20px;
+            background-color: #e9ecef;
+            padding: 20px;
+            text-align: center;
+            font-size: 24px;
+            color: #333;
+            border-bottom: 1px solid #ccc;
+        }
         nav {
             background-color: #333;
             overflow: hidden;
@@ -73,7 +82,7 @@
 <body>
 
     <header>
-        <h1>Our Services</h1>
+        <h1>Cleron Services</h1>
     </header>
 
     <nav>
