--- a/products.html
+++ b/products.html
@@ -130,7 +130,7 @@
                 </a>
                 <!-- Download Datasheet Section -->
                 <div class="download-section">
-                    <a href="documents/tatp001_datasheet.pdf" download>
+                    <a href="documents/sample.pdf" download>
                         Download Datasheet
                     </a>
                 </div>
