--- a/consultancy.html
+++ b/consultancy.html
@@ -14,20 +14,38 @@
         header {
             background-color: #264653;
             color: white;
-            padding: 40px;
-            text-align: center;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            padding: 10px 20px;
+            position: relative;
         }
-        header h1 {
+        .logo-container {
+            display: flex;
+            align-items: center;
+        }
+        .logo {
+            height: 50px;
+            margin-right: 10px;
+        }
+        .logo-text {
+            line-height: 1.2;
+        }
+        .logo-text h1 {
+            font-size: 24px;
             margin: 0;
         }
-        .secondary-header {
-            margin-top: 20px;
-            background-color: #e9ecef;
-            padding: 20px;
-            text-align: center;
-            font-size: 24px;
-            color: #333;
-            border-bottom: 1px solid #ccc;
+        .logo-text p {
+            font-size: 14px;
+            margin: 0;
+        }
+        .services-title {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            font-size: 28px;
+            font-weight: bold;
         }
         nav {
             background-color: #333;
@@ -82,7 +100,18 @@
 <body>
 
     <header>
-        <h1>Cleron Services</h1>
+        <!-- Logo, Name, and Slogan Together -->
+        <div class="logo-container">
+            <a href="index.html">
+                <img src="images/cleron_logo.jpeg" alt="Cleron Logo" class="logo">
+            </a>
+            <div class="logo-text">
+                <h1>Cleron</h1>
+                <p>Defect Free Machining</p>
+            </div>
+        </div>
+        <!-- Centered Title -->
+        <div class="services-title">Cleron Services</div>
     </header>
 
     <nav>
@@ -90,7 +119,7 @@
         <a href="products.html">Products</a>
         <a href="distributorship.html">Distributorship</a>
         <a href="trading.html">Trading</a>
-        <a href="services.html">Services</a>
+        <a href="consultancy.html">Services</a>
         <a href="contact.html">Contact Us</a>
     </nav>
 
