--- a/trading.html
+++ b/trading.html
@@ -14,11 +14,38 @@
         header {
             background-color: #264653;
             color: white;
-            padding: 40px;
-            text-align: center;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            padding: 10px 20px;
+            position: relative;
         }
-        header h1 {
+        .logo-container {
+            display: flex;
+            align-items: center;
+        }
+        .logo {
+            height: 50px;
+            margin-right: 10px;
+        }
+        .logo-text {
+            line-height: 1.2;
+        }
+        .logo-text h1 {
+            font-size: 24px;
             margin: 0;
+        }
+        .logo-text p {
+            font-size: 14px;
+            margin: 0;
+        }
+        .trading-title {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            font-size: 28px;
+            font-weight: bold;
         }
         nav {
             background-color: #333;
@@ -76,7 +103,18 @@
 <body>
 
     <header>
-        <h1>Trading</h1>
+        <!-- Logo, Name, and Slogan Together -->
+        <div class="logo-container">
+            <a href="index.html">
+                <img src="images/cleron_logo.jpeg" alt="Cleron Logo" class="logo">
+            </a>
+            <div class="logo-text">
+                <h1>Cleron</h1>
+                <p>Defect Free Machining</p>
+            </div>
+        </div>
+        <!-- Centered Title -->
+        <div class="trading-title">Trading</div>
     </header>
 
     <nav>
@@ -88,7 +126,7 @@
         <a href="contact.html">Contact Us</a>
     </nav>
 
-    <main> 
+    <main>
         <ul class="services-list">
             <li>Supply of machine tools electrical control panel accessories</li>
         </ul>
