feat : document for download modified and download button for document changed

--- a/products.html
+++ b/products.html
@@ -148,7 +148,7 @@
                     Buy Now on Amazon
                 </a>
                 <div class="download-section">
-                    <a href="documents/tbds003_datasheet.pdf" download>Download Datasheet</a>
+                    <a href="documents/tbds003_datasheet.pdf" download>Download specfication document</a>
                 </div>
             </div>
             <div class="product-card">
@@ -161,7 +161,7 @@
                     Buy Now on Amazon
                 </a>
                 <div class="download-section">
-                    <a href="documents/sample.pdf" download>Download Datasheet</a>
+                    <a href="documents/tatp001_datasheet.pdf" download>Download specfication document</a>
                 </div>
             </div>
         </div>
