feat : Gst number added in the contact page

--- a/contact.html
+++ b/contact.html
@@ -121,6 +121,7 @@
             <p>Email: <a href="mailto:clerontechnologies@gmail.com">clerontechnologies@gmail.com</a></p>
             <p>Phone: (+91) 9962580995</p>
             <p>Address: Kelambakkam, Chennai 603103, India</p>
+            <p>GST Number: 33DQRPS7956H1ZY </p>
             <p>Feel free to reach out to us for any inquiries or support!</p>
         </div>
     </main>
