feat : Gst number added in the contact page and some aesthetic changess

--- a/contact.html
+++ b/contact.html
@@ -122,7 +122,7 @@
             <p>Phone: (+91) 9962580995</p>
             <p>Address: Kelambakkam, Chennai 603103, India</p>
             <p>GST Number: 33DQRPS7956H1ZY </p>
-            <p>Feel free to reach out to us for any inquiries or support!</p>
+            <p>Feel free to reach out to us for any inquiries or support!!</p>
         </div>
     </main>
 
